Modified pom.xml to use the parent pom.xml and removed the extraneous dependencies