@@ -1,32 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <spring.version>2.5.6</spring.version>
-        <spring.security.version>2.0.4</spring.security.version>
-        <spring.integrations.version>1.0.4.RELEASE</spring.integrations.version>
-        <gx.version>1.2.6</gx.version>
-        <xmlbeans-infrastructure.version>1.2.1</xmlbeans-infrastructure.version>
-        <infrastructure.version>1.2.0</infrastructure.version>
-        <infrastructure.xmpp.version>1.2.0</infrastructure.xmpp.version>
-        <github.global.server>github</github.global.server>
-    </properties>
+    <parent>
+        <groupId>com.leidos.xchangecore.core</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
-    <groupId>com.leidos.xchangecore.core.infrastructure</groupId>
-    <artifactId>services</artifactId>
+    <artifactId>infra-services</artifactId>
     <packaging>jar</packaging>
-    <name>Infrastructure's Services for xChangeCore</name>
+    <name>xChangeCore's Infrastructure's Services</name>
     <version>${infrastructure.version}</version>
-
-    <repositories>
-        <repository>
-            <id>xchangecore-mvn-repo</id>
-            <name>The global repository for the general purpose</name>
-            <url>https://github.com/huangdy/xchangecore-maven-repo/raw/master/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
 
@@ -34,23 +20,7 @@
             <groupId>net.sourceforge.saxon</groupId>
             <artifactId>saxon</artifactId>
             <version>9.1.0.8</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sourceforge.saxon</groupId>
-            <artifactId>saxon</artifactId>
-            <version>9.1.0.8</version>
             <classifier>xqj</classifier>
-        </dependency>
-        <dependency>
-            <groupId>net.sourceforge.saxon</groupId>
-            <artifactId>saxon</artifactId>
-            <version>9.1.0.8</version>
-            <classifier>dom</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.xmlbeans</groupId>
-            <artifactId>xmlbeans</artifactId>
-            <version>2.4.0</version>
         </dependency>
 
         <dependency>
@@ -58,20 +28,6 @@
             <artifactId>jts</artifactId>
             <version>1.11</version>
         </dependency>
-        <!-- ddh 1/7/15
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.3alpha-8</version>
-        </dependency>
-
-            <dependency>
-            <groupId>apache-oro</groupId>
-            <artifactId>jakarta-oro</artifactId>
-            <version>2.0.8</version>
-            </dependency>
-        -->
 
         <dependency>
             <groupId>com.usersmarts.core</groupId>
@@ -88,100 +44,41 @@
             <artifactId>com.usersmarts.cx.hbm</artifactId>
             <version>${gx.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>com.leidos.xchangecore.core.infrastructure</groupId>
-            <artifactId>messages</artifactId>
+            <groupId>com.leidos.xchangecore.core</groupId>
+            <artifactId>infra-messages</artifactId>
             <version>${infrastructure.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.leidos.xchangecore.core.infrastructure</groupId>
+            <groupId>com.leidos.xchangecore.core</groupId>
             <artifactId>xmlbeans-infrastructure</artifactId>
             <version>${xmlbeans-infrastructure.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--
-            <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>${spring.version}</version>
-            </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-            <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-            </dependency>
-        -->
+
         <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws</artifactId>
             <version>1.5.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.ws</groupId>
-            <artifactId>spring-ws-support</artifactId>
-            <version>1.5.1</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core-tiger</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-acl</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-taglibs</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>
-        <!--
-            <dependency>
-            <groupId>org.springframework.integration</groupId>
-            <artifactId>org.springframework.integration</artifactId>
-            <version>${spring.integrations.version}</version>
-            </dependency>
-        -->
+
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-core</artifactId>
             <version>${spring.integrations.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-core</artifactId>
-            <version>1.3.0.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ldap</groupId>
-            <artifactId>spring-ldap-core-tiger</artifactId>
-            <version>1.3.0.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -189,6 +86,7 @@
             <artifactId>commons-codec</artifactId>
             <version>1.3</version>
         </dependency>
+
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
@@ -198,8 +96,8 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
-            <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
@@ -236,19 +134,7 @@
             <artifactId>jaxen</artifactId>
             <version>1.1</version>
         </dependency>
-        <!-- 
-        <dependency>
-            <groupId>javax.xml.soap</groupId>
-            <artifactId>saaj-api</artifactId>
-            <version>1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.messaging.saaj</groupId>
-            <artifactId>saaj-impl</artifactId>
-            <version>1.3</version>
-        </dependency>
-         -->
-        
+
         <!-- there are two MSSQL server database drivers as below -->
         <!-- jtds MSSQL server database driver -->
         <dependency>
@@ -265,63 +151,6 @@
             </dependency>
             ddh 1/7/15 -->
 
-        <dependency>
-            <groupId>org.apache.xmlrpc</groupId>
-            <artifactId>xmlrpc-client</artifactId>
-            <version>3.1.2</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.xmlrpc</groupId>
-            <artifactId>xmlrpc-common</artifactId>
-            <version>3.1.2</version>
-            <type>jar</type>
-        </dependency>
-        <!-- 
-        <dependency>
-            <groupId>org.apache.ws.commons.util</groupId>
-            <artifactId>ws-commons-util</artifactId>
-            <version>1.0.2</version>
-            <type>jar</type>
-        </dependency>
-         -->
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.13</version>
-        </dependency>
-
     </dependencies>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/resources</directory>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.2</version>
-                <configuration>
-                    <!-- forkMode and MaxPermSize are set to overcome OutOfMemory exceptions -->
-                    <forkMode>once</forkMode>
-                    <argLine>-XX:MaxPermSize=128M</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
